# remarkable-highlights-extractor

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  README.md  pyproject.toml
data/: .tree  282f0e0e-e384-4835-8b51-5c62eac250aa.content  282f0e0e-e384-4835-8b51-5c62eac250aa.metadata  282f0e0e-e384-4835-8b51-5c62eac250aa.pagedata
data/282f0e0e-e384-4835-8b51-5c62eac250aa/: 1bb5c72b-97f8-4d15-b127-1bf5453c1f92.rm  4695be02-d3b6-4b4b-a1e7-3104f8f8885c.rm  9195b4ce-0bca-487f-86c5-9ca6585e6472.rm  9e520c8e-67bc-4213-b273-34a744f20f97.rm
data/282f0e0e-e384-4835-8b51-5c62eac250aa.highlights/: 1bb5c72b-97f8-4d15-b127-1bf5453c1f92.json  4695be02-d3b6-4b4b-a1e7-3104f8f8885c.json
highlights_extractor/: constants.py  file_reader.py  model_utils.py  models.py  path_utils.py  process_documents.py  utils.py
highlights_extractor/app/: main_page.py
highlights_extractor/config/: exceptions.py
highlights_extractor/repository/: file_reader.py  knowledge_manager_writer.py
remarkable-highlights/: explo.py
remarks_extractor/: explo.py  utils.py
remarks_extractor/app/: main.py
remarks_extractor/config/: cleaned_models.py  constants.py  exceptions.py  models.py  types.py
remarks_extractor/extractor/: remarks.py
remarks_extractor/repository/: file_reader.py
tests/: constants.py
tests/highlights_extractor/: conftest.py  test_model_utils.py  test_models.py  test_process_documents.py  test_utils.py
tests/highlights_extractor/repository/: test_knowledge_manager_writer.py
tests/repository/: test_models.py
