[tool.poetry]
name = "remarks_extractor"
version = "0.1.0"
description = "Python project to extract highlights from your remarkable"
authors = ["Emilio DE SOUSA <desousa.emilio.info@gmail.com>"]
[tool.poetry.dependencies]
python = ">=3.10, <3.11"
streamlit = "^1.11.1"
numpy = "^1.23.4"
pandas = "^1.5.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
isort = "^5.10.1"
mypy = "^0.982"
pytest = "^7.1.3"
black = "^22.10.0"
ipykernel = "^6.16.0"
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
