[tool.poetry]
name = "remarks_extractor"
version = "0.1.0"
description = "Python project to extract highlights from your remarkable"
authors = ["Emilio DE SOUSA <desousa.emilio.info@gmail.com>"]
[tool.poetry.dependencies]
python = ">=3.10, <3.11"
streamlit = "^1.11.1"
numpy = "^1.23.4"
pandas = "^1.5.0"
pymupdf = "^1.21.0"
pillow = "^9.3.0"
thefuzz = "^0.19.0"
pydantic = "^1.10.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
isort = "^5.10.1"
mypy = "^0.982"
pytest = "^7.1.3"
black = "^22.10.0"
ipykernel = "^6.16.0"
pylint = "^2.15.5"
matplotlib = "^3.6.2"

[tool.poetry.group.dev.dependencies]
commitizen = "^2.39.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


## black

[tool.black]
target-version = ['py310']

## pylint

[tool.pylint.messages_control]
disable = [
    # already managed by isort:
    "ungrouped-imports",
    "wrong-import-order",
    "wrong-import-position",
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
]

[tool.pylint.similarities]
ignore-signatures = "yes"
ignore-imports = "yes"

[tool.pylint.basic]
no-docstring-rgx = "^_|^test_|^Test[A-Z]" # no docstrings for tests

## isort

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 310

## coverage

[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_empty = true
fail_under = 60.00
precision = 2

## mypy
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
